force-app/main/default/objects/b3p__Web_Portal__c/b3p__Web_Portal__c.object-meta.xml
<CustomObject>
    <label>Web Portal</label>
    <nameField>
        <label>Portal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Portals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>