force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__Branding_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>b3p__Branding_Resource_Name__c</fullName>
    <defaultValue>&quot;b3p__Branding&quot;</defaultValue>
    <inlineHelpText>Define the name of a static resource that contains the branding information</inlineHelpText>
    <label>Branding Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>