force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__Emulated_Contact__c.field-meta.xml
<CustomField>
    <fullName>b3p__Emulated_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When the &quot;Preview&quot; button is clicked inside the editor, this will be the contact set as the running user</inlineHelpText>
    <label>Emulated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Web Portals</relationshipLabel>
    <relationshipName>Web_Portals</relationshipName>
    <type>Lookup</type>
</CustomField>