force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__Home_Page__c.field-meta.xml
<CustomField>
    <fullName>b3p__Home_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Page</label>
    <referenceTo>b3p__Page__c</referenceTo>
    <relationshipLabel>Web Portals</relationshipLabel>
    <relationshipName>Web_Portals</relationshipName>
    <type>Lookup</type>
</CustomField>