force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__Page_404__c.field-meta.xml
<CustomField>
    <fullName>b3p__Page_404__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page 404</label>
    <referenceTo>b3p__Page__c</referenceTo>
    <relationshipLabel>Web Portals (Page 404)</relationshipLabel>
    <relationshipName>Web_Portals1</relationshipName>
    <type>Lookup</type>
</CustomField>