force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_BG_Color__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_BG_Color__c</fullName>
    <defaultValue>&quot;#ffffff&quot;</defaultValue>
    <label>PWA: BG Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>