force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Description__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Description__c</fullName>
    <label>PWA: Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>