force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Short_Name__c</fullName>
    <defaultValue>&quot;3B&quot;</defaultValue>
    <label>PWA: Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>