force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Start_URL__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Start_URL__c</fullName>
    <defaultValue>&quot;/b3p__Portal#Index&quot;</defaultValue>
    <label>PWA: Start URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>