force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Status_Bar_Type__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Status_Bar_Type__c</fullName>
    <defaultValue>&quot;black-translucent&quot;</defaultValue>
    <label>PWA: Status Bar Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>