force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Theme_Color__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Theme_Color__c</fullName>
    <defaultValue>&quot;#00ca72&quot;</defaultValue>
    <label>PWA: Theme Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>