force-app/main/default/objects/b3p__Web_Portal__c/fields/b3p__PWA_Viewport__c.field-meta.xml
<CustomField>
    <fullName>b3p__PWA_Viewport__c</fullName>
    <defaultValue>&quot;width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no&quot;</defaultValue>
    <label>PWA: Viewport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>