force-app/main/default/objects/b3p__Web_Portal__c/listViews/b3p__All.listView-meta.xml
<ListView>
    <fullName>b3p__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>